--- a/calculus/infinite-integral.ipynb
+++ b/calculus/infinite-integral.ipynb
@@ -28,6 +28,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Quotient Rules\n",
+    "\n",
     "<!-- Explain quotient rule -->\n",
     "$$\n",
     "\n",
